# readium-demo-for-test

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/delegate/: CloseDelegate.cpp  CloseDelegate.h
src/model/: Model.h
src/ui/: ActionFactory.h  ActionWidget.h  CloseButton.cpp  CloseButton.h  CreateMainWindowCommand.cpp  CreateMainWindowCommand.h  CreateSubwindowCommand.cpp  CreateSubwindowCommand.h  IUICommand.h  IUIFactory.h  MainWindowFactory.cpp  MainWindowFactory.h  SubwindowFactory.cpp  SubwindowFactory.h
